feat: release AVORA 3.0.7